fix url issue from other pc

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="!userConnected">
   <input type="text" [(ngModel)]="pseudo" placeholder="choose pseudo">
+  <input type="text" [(ngModel)]="url" placeholder="choose url">
   <button (click)="signUp()">log in</button>
 </div>
 
